Removed `margin-left: 35px` from the `.left` class on mobile. This previously addressed issue with overlapping menu icon and header, which should have since been resolved in newer wagtail versions.

--- a/wagtail/wagtailadmin/static_src/wagtailadmin/scss/components/_header.scss
+++ b/wagtail/wagtailadmin/static_src/wagtailadmin/scss/components/_header.scss
@@ -34,10 +34,6 @@ header {
     .left {
         float: left;
 
-        @media screen and (max-width: $breakpoint-mobile) {
-            margin-left: 35px;
-        }
-
         .hasform &:first-child {
             padding-bottom: 0.5em;
             float: none;
